corrected hamburger menu, dropdown on mobile WIP

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,9 +19,7 @@
 }
 
 /* NAVBAR */
- #smallMenu {
-  display: none;
-}
+
 
 nav {
     grid-area: nav;
@@ -64,6 +62,15 @@ nav li {
     border-radius: 15px;
 }
 
+#responsiveMenu a {
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+nav label, #hamburger {
+  display: none;
+}
+
 /* Dropdown */
 
 .dropdown {
@@ -79,12 +86,11 @@ nav li {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
-  margin-top: 10px;
+  margin-top: 8px;
   z-index: 1;
 }
 
 .dropMenuItem {
-  color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -93,6 +99,12 @@ nav li {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+.dropdown-content:hover {
+  display: block;
+}
+
+
 /*nav ends here*/
 
 body{ /*background color changed slightly lighter Gabi 17/04*/
@@ -146,32 +158,46 @@ footer {
 /* FIRST MEDIA BREAKPOINT  = tablets */
 
 @media screen and (max-width: 800px) {
-  #mobileMenu {
+   #responsiveMenu a {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+ nav {
+   position: absolute;
+   top: 0;
+ }
+
+ nav ul {
+   text-align: left;
+   padding-left: 0;
+ }
+
+  nav label {
+    display: inline-block;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    margin: 10px;
+  }
+
+  #nav li {
+    margin: 0;
+  }
+
+  #responsiveMenu {
     display: none;
   }
 
-  #smallMenu {
+  nav input:checked ~ #responsiveMenu {
     display: block;
-    float: right;
-    margin: 10px 20px;
-  }
-
-  #smallMenu button {
-    text-decoration: none;
-    border: none;
     background-color: rgb(0, 67, 11);
-    font-weight: bold;
-    font-size: 25px;
-    color: white;
   }
 
-  #smallMenu button:focus {
-    background-color: rgb(144, 187, 109);
-    border-radius: 15px;
-  }
-
-  #nav {
-    display: initial;
+  .dropdown-content {
+    width: 100%;
+    margin-top: 0;
   }
 }
     
